# CASCADES--continual-PEFT-for-Local-LLMs

./: .gitignore  CASCADES_proposal.md  CASCADES_v9_Training.ipynb  CONTEXT.md  Modelfile  README.md  REDDIT_POST.md  TASKS.md  Training-Data2.md  abliterate.ipynb  abliterate_a100.ipynb  agent_daemon.py  autorun.mjs  build_knowledge_graph.py  build_training_data.py  cascades_qwen3_abliterated_results.csv  cascades_reasoning_results.csv  cascades_v10_colab_results (1).csv  cascades_v10_colab_results (2).csv  cascades_v10_colab_results.csv  cascades_v10_twin_results.csv  cascades_v2_results.csv  cascades_v3_results.csv  cascades_v9_colab_results.csv  cascades_v9_results.csv  chat_raw.py  chat_twin.py  colab_cascades_qwen3_abliterated.ipynb  colab_cascades_v10.ipynb  colab_cascades_v9.ipynb  colab_digital_twin_extraction.ipynb  colab_quickstart.ipynb  deep-think-results.txt  deep_think_prompt.md  deep_think_v6_blueprint.md  deep_think_v6_prompt.md  deep_think_v9_prompt.md  download_real_data.py  empirical_proof_raw.txt  empirical_proof_summary.txt  (+23 more)
.claude/: settings.local.json
app/: CONTEXT.md  README.md  conversation_store.py  dream_cycle.py  model_loader.py  prepare_memory.py  self_synthesizer.py  server.py
cascades/: CONTEXT.md  __init__.py  adapters.py  config.py  data.py  eval.py  injection.py  math_ops.py  qwen35.py  sleep.py  vram_monitor.py
cascades_exp/: CONTEXT.md  analyze.py  cascades_api.py  em_diagnostic.py  eval_exact_match.py  hf_cascades.py  hf_cascades_reasoning.py  hf_cascades_v2.py  hf_cascades_v3.py  hf_cascades_v4.py  hf_cascades_v5.py  index.html  lora_baseline.py  run_final_benchmarks.py  task0_logic.jsonl  task0_logic_cot.jsonl  task1_decomp.jsonl  task1_decomp_cot.jsonl  task1_decomp_xl.jsonl  task2_action.jsonl  task2_action_cot.jsonl  test_baseline.py  test_cascades.py  test_load_hf.py
data/: task0_gsm8k_cot.jsonl  task0_logic_cot.jsonl  task1_arc_cot.jsonl  task1_decomp_cot.jsonl  task2_csqa_cot.jsonl
docs/: TUNING_WALKTHROUGH_v3.1_to_v5.md
experiments/: ablation.py  run_experiment.py  run_rigorous_ablation.py  run_stress_test.py  v10_hypotheses.md
(+213 files in other folders)
