[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cascades"
version = "1.0.0"
description = "CASCADES: Parameter-Efficient Continual Adaptation via Shared Dynamic Subspaces"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "continual learning", "parameter-efficient fine-tuning",
    "LoRA", "catastrophic forgetting", "Stiefel manifold",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "transformers>=4.44.0",
    "tokenizers>=0.21.1",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]
dev  = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "ruff>=0.5.0"]

[project.scripts]
cascades-run = "experiments.run_experiment:main"
cascades-ablation = "experiments.ablation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascades*", "experiments*"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ── ruff (linting) ────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 99
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F401",   # imported but unused (some imports are for re-export)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["F811"]  # allow fixture redefinition
